# dependency-visualizer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: check-deps.yml
dgvis/: __init__.py  __main__.py  analyzer.py  cli.py  exporter.py  graph.py  parser.py
dgvis/web/: index.html  serve.py
fixtures/: Cargo.toml  Gemfile  cyclic.yaml  deep_tree.yaml  go.mod  malformed.txt  package-lock.json  package.json  pom.xml  simple.txt  simple.yaml  with_versions.txt
scripts/: pre-commit-hook.sh
tests/: test_analyzer.py  test_cli.py  test_exporter.py  test_graph.py  test_parser.py  test_performance.py  test_plugin.py
