[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dgvis"
version = "1.0.0"
description = "CLI tool to parse dependency files, build graphs, detect cycles, and visualize as interactive D3.js dashboards."
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "Atikul Munna" },
]
keywords = ["dependency", "graph", "visualizer", "cli", "d3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
]

dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
dgvis = "dgvis.cli:main"

[tool.setuptools.packages.find]
include = ["dgvis*"]

[tool.setuptools.package-data]
"dgvis.web" = ["*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]

